@@ -508,6 +508,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11841: Fix comparison bug with 'rc' versions in packaging.version.
+  Patch by Filip Gruszczyński.
+
 - Issue #13447: Add a test file to host regression tests for bugs in the
   scripts found in the Tools directory.
 
